dolphinview: fix crash

Correctly find the last element in the list instead of the one after the last

Amends: 0464ea82a6850f58805bc4d6fc1df5369d83c3df

BUG: 503610